manifest/api-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 9090           # service port
      targetPort: 9090   # container portt
