manifest/api-gateway/external-tool-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
    - "argocd.sikeat.me"
  gateways:
    - default/main-gateway
  http:
    - route:
        - destination:
            host: argocd-server
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "kiali.sikeat.me"
  gateways:
    - default/main-gateway
  http:
    - route:
        - destination:
            host: kiali
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: default
spec:
  hosts:
    - "grafana.sikeat.me"
  gateways:
    - default/main-gateway
  http:
    - route:
        - destination:
            host: monitoring-grafana
            port:
              number: 80
